# ChimeraBot

./: .gitignore  README.md
ChimeraBot/: CMakeLists.txt  CMakePresets.json  CMakeSettings.json
ChimeraBot/Bot/: Bot.cpp  Bot.h  BotApplication.cpp  BotApplication.h  BotManager.cpp  BotManager.h  CMakeLists.txt  Command.cpp  Command.h  ErrorCodes.h  generateCommandType.py  main.cpp
ChimeraBot/Bot/Utilities/: StringFormatter.h  chCommandArguments.h  chDebug.cpp  chDebug.h  chFileStream.cpp  chFileSystem.cpp  chFileSystem.h  chLog.h  chModule.h  chPath.cpp  chPath.h  chPlatformDefines.h  chPrerequisitesUtilities.h  chSTDHeaders.h  chUsing.h  chWin32Path.cpp
ChimeraBot/Bot/src/: BotApplication.cpp  BotApplication.h  Command.h  CommandTypes.h
ChimeraBot/Bot/src/Commands/: PingCommand.cpp  PingCommand.h  commandCreator.py
ChimeraBot/Bot/src/Utilities/: chDebug.cpp  chException.h  chFileStream.h  chFlags.h  chModule.h  chPlatformTypes.h  chPrerequisitesUtilities.h  chStringUtils.cpp  chStringUtils.h  chUnicode.cpp  chUnicode.h  chWindows.h
